--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="style.css">
     <script src="/login.js"></script> 
 </head>
 <body>
     <div class="container">
-        <h1>Login</h1>
+      <center><h1>Login</h1>
         <form action="https://www.linkedin.com">
           <button type="submit">Continue with linkedin</button>
-        </form>
+        </form></center>
      </div>
 </body>
 </html>
